--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1>About Me</h1>
           </div>
           <div class="row">
-            <div class="col" style="width: 50%">
+            <div class="col" >
                 <div class="about-info">
                     <h3>My Introduction</h3>
                     <p>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col" style="width: 50%">
+            <div class="col">
                 <div class="about-info">
                     <h3>My Education</h3>
                     <h4> Brick School </h4>
@@ -223,7 +223,10 @@
 
     </div>
 
-   <!-- ----- TYPING JS Link ----- -->
+
+
+
+    <!-- ----- TYPING JS Link ----- -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
        <!-- ----- SCROLL REVEAL JS Link----- -->
